--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -12,7 +12,9 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    background: linear-gradient(#F2B807, #F5DB13)
+    background: linear-gradient(#F2B807, #F5DB13);
+    box-shadow: 0px 0px 3px 0px solid #000;
+    
 }
 
 header>button {
@@ -28,34 +30,73 @@ header>img {
     display: none;
 }
 
-.navbar > a {
+.navbar>a {
     font-size: 1.5rem;
     margin: 0 10px 0 0;
 }
 
+main {
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background: linear-gradient(#F5DB13, #F2B807);
+    height: 100%;
+    ;
 
-@media(min-width: 481px) and (max-width: 768px) {
-    
-   
-    
-    header > img {
+}
+
+main > h1 {
+    font-size: 42px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-weight: normal;
+padding: 40px;
+}
+
+main > p {
+    font-size: 12px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: normal;
+}
+.picachu {
+    max-width: 100%;
+}
+
+.link-pokemons{
+    width: 300px;
+    height: 50px;
+    border-radius: 11px;
+
+}
+
+@media(min-width: 481px) {
+
+header{
+    padding: 20px 10px;
+}
+
+    header>img {
         width: 128px;
     }
 
 
 }
 
-@media(min-width: 650px){
-
-    .hamburguer-menu {
-        display: none;
-    }
+@media(min-width: 650px) {
 
     .navbar {
         display: flex;
     }
 
+    .hamburguer-menu {
+        display: none;
+    }
+
+
+
 }
+
 /*BREAKPOINTS
 0-480 Smartphone
 481-768  smartphones largos
@@ -63,3 +104,12 @@ header>img {
 769-1279 desktops, tablets, notebook
 1280+n  desktops e monitores
 */
+
+@media(min-width: 769px){
+    main{
+        flex-direction: row-reverse;
+    }
+
+    
+
+}
